--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>FsBlog</title>
+    <title>404</title>
 	  <meta name="description" content="">
     <meta name="author" content="Simon Dickson">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -94,7 +94,7 @@
           <img src="http://www.gravatar.com/avatar/db889c0148e478a362dd7a3c5fb818a5?s=150" class="img-circle" />
         </a>
         <h3 class="title">
-              <a href="https://simonhdickson.github.io/">FsBlog</a>
+              <a href="https://simonhdickson.github.io/">404</a>
           </h3>
       </header>
 
@@ -139,10 +139,56 @@
     <div class="col-sm-9 col-sm-offset-3">
       
 
-    <a href="blog/2013/11-24-tabs-vs-spaces/index.html">Tabs vs Spaces</a>
-    <a href="blog/2013/11-22-the-simon-says-monad/index.html">The Simon Says Monad</a>
-    <a href="blog/2013/11-16-fscheck/index.html">FsCheck</a>
+<!----------------------------------------------------------------
+     _ _           _ _          
+  __| | |__  _   _| | |         Ascii arts included in this page:
+ / _` | '_ \| | | | | |         - R2D2, provided by: http://www.chris.com/
+| (_| | |_) | |_| | | |         - Texts, generated from: http://www.network-science.de/ascii/
+ \__,_|_.__/ \__, |_|_|         http://github.com/dbtek/dbyll
+-------------|___/------------------------------------------------>
 
+  <style>
+    pre {
+          background: none;
+          border: none;
+          color: black;
+    }
+  </style>
+
+  <pre>
+
+                       444444444       000000000            444444444   
+                      4::::::::4     00:::::::::00         4::::::::4  
+                     4:::::::::4   00:::::::::::::00      4:::::::::4  
+                    4::::44::::4  0:::::::000:::::::0    4::::44::::4  
+                   4::::4 4::::4  0::::::0   0::::::0   4::::4 4::::4  
+                  4::::4  4::::4  0:::::0     0:::::0  4::::4  4::::4  
+                 4::::4   4::::4  0:::::0     0:::::0 4::::4   4::::4  
+                4::::444444::::4440:::::0 000 0:::::04::::444444::::444
+                4::::::::::::::::40:::::0 000 0:::::04::::::::::::::::4
+                4444444444:::::4440:::::0     0:::::04444444444:::::444
+                          4::::4  0:::::0     0:::::0          4::::4  
+                          4::::4  0::::::0   0::::::0          4::::4  
+                          4::::4  0:::::::000:::::::0          4::::4  
+                        44::::::44 00:::::::::::::00         44::::::44
+                        4::::::::4   00:::::::::00           4::::::::4
+                        4444444444     000000000             4444444444
+
+         ,-----.             _   _     _           _                 _     _               _   
+       ,'_/_|_\_`.          | |_| |__ (_)___   ___| |__   ___  _   _| | __| |  _ __   ___ | |_ 
+      /<<::8[O]::>\         | __| '_ \| / __| / __| '_ \ / _ \| | | | |/ _` | | '_ \ / _ \| __|
+     _|-----------|_        | |_| | | | \__ \ \__ \ | | | (_) | |_| | | (_| | | | | | (_) | |_ 
+ :::|  | ====-=- |  |:::     \__|_| |_|_|___/ |___/_| |_|\___/ \__,_|_|\__,_| |_| |_|\___/ \__|
+ :::|  | -=-==== |  |:::                                                                         
+ :::\  | ::::|()||  /:::     _                                                          
+ ::::| | ....|()|| |::::    | |__   __ _ _ __  _ __   ___ _ __       _____   _____ _ __ 
+     | |_________| |        | '_ \ / _` | '_ \| '_ \ / _ \ '_ \     / _ \ \ / / _ \ '__|
+     | |\_______/| |        | | | | (_| | |_) | |_) |  __/ | | |_  |  __/\ V /  __/ |   
+    /   \ /   \ /   \       |_| |_|\__,_| .__/| .__/ \___|_| |_( )  \___| \_/ \___|_|   
+    `---' `---' `---'                   |_|   |_|              |/                       
+
+
+    </pre>
 
       <footer>
         <hr/>
